# sightnet-core

./: .gitignore  Cargo.toml  Config.toml  README.md
benches/: benchmark.rs
corpora/: corpus.txt
lib/: Cargo.toml
lib/benches/: benchmark.rs
lib/src/: collection.rs  document.rs  example.rs  field.rs  file.rs  inverted_index.rs  lib.rs  ranker.rs  search.rs  term.rs  tokenizer.rs
server/: Cargo.toml
server/src/: api_error.rs  api_result.rs  config.rs  main.rs
server/src/routes/: collection.rs  document.rs  mod.rs  state.rs
src/: collection.rs  document.rs  example.rs  field.rs  file.rs  inverted_index.rs  lib.rs  ranker.rs  search.rs  term.rs
